--- a/css/main.css
+++ b/css/main.css
@@ -352,7 +352,7 @@ form div h3 {
 .container-home {
 	width: 100%;
 	height: 100vh;
-	background-image: url("/images/home_ice.png");
+	background-image: url("css/images/home_ice.png");
 	background-size: cover;
 	background-position: center;
 	padding: var(--container-padding);
@@ -362,7 +362,7 @@ form div h3 {
 .container-about {
 	width: 100%;
 	height: 100vh;
-	background-image: url("/images/rustic_ice.png");
+	background-image: url("css/images/rustic_ice.png");
 	background-size: cover;
 	background-position: center;
 	padding: var(--container-padding);
@@ -374,7 +374,7 @@ form div h3 {
 .container-cater {
 	width: 100%;
 	height: 100vh;
-	background-image: url("/images/rustic_cream.png");
+	background-image: url("css/images/rustic_cream.png");
 	background-size: cover;
 	background-position: center;
 	padding: var(--container-padding);
